WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57240
Web Inspector: brush up and rename debugger domain.
https://bugs.webkit.org/show_bug.cgi?id=57240
Summary
Web Inspector: brush up and rename debugger domain.
Pavel Feldman
Reported
2011-03-28 09:33:32 PDT
Patch to follow.
Attachments
Patch
(38.31 KB, patch)
2011-03-28 09:49 PDT
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-03-28 09:49:50 PDT
Created
attachment 87155
[details]
Patch
WebKit Review Bot
Comment 2
2011-03-28 09:58:22 PDT
Attachment 87155
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8272553
Yury Semikhatsky
Comment 3
2011-03-28 09:58:31 PDT
Comment on
attachment 87155
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=87155&action=review
> Source/WebCore/inspector/Inspector.json:1228 > + "name": "scriptFailedToParse",
scriptParsingFailed
> Source/WebCore/inspector/InspectorDebuggerAgent.cpp:181 > +void InspectorDebuggerAgent::setBreakpoint(ErrorString*, const String& sourceId, int lineNumber, int columnNumber, const String& condition, bool enabled, String* outBreakpointId, int* actualLineNumber, int* actualColumnNumber)
setBreakpointBySourceId?
Pavel Feldman
Comment 4
2011-03-28 10:17:21 PDT
Committed
r82131
: <
http://trac.webkit.org/changeset/82131
>
WebKit Review Bot
Comment 5
2011-03-28 10:24:26 PDT
http://trac.webkit.org/changeset/82131
might have broken Chromium Linux Release
Andrey Adaikin
Comment 6
2011-03-30 02:35:08 PDT
View in context:
https://bugs.webkit.org/attachment.cgi?id=87155&action=review
> Source/WebCore/inspector/front-end/DebuggerModel.js:182 > + _didEditScriptSource: function(sourceID, callback, error, error, newBody, callFrames)
ERROR: redefinition of "error" variable. It breaks handling JS backend compile errors in live edit.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug